# ternary-svm

./: AGENT.md  AGENTS.md  Cargo.toml  README.md  STUDENT_GUIDE.md
memory/: JOURNAL.md
src/: lib.rs
