[package]
description = "ternary-svm - SuperInstance ecosystem crate"
repository = "https://github.com/SuperInstance/ternary-svm"
name = "ternary-svm"
version = "0.1.0"
edition = "2024"

[dependencies]
ternary-types = { git = "https://github.com/SuperInstance/ternary-types.git", features = ["std"] }
