[package]
name = "ternary-svm"
version = "0.2.0"
description = "PEGASOS-based linear SVM for ternary {-1, 0, +1} feature vectors"
repository = "https://github.com/SuperInstance/ternary-svm"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
csv = { version = "1", optional = true }

[features]
default = []
cli = ["clap", "csv", "serde", "serde_json"]
